--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 body {
   background-color: blueviolet;
+  color: aliceblue;
+  font-family: Oswald;
+  text-align: center;
+}
+
+h1,
+h2,
+h3 {
+  font-weight: 300;
+}
+
+
+h2,
+h3 {
+  margin: 0px;
 }
