--- a/src/components/layout/Card.css
+++ b/src/components/layout/Card.css
@@ -4,6 +4,11 @@
   border-radius: 10px;
   overflow: hidden;
   margin: 10px;
+
+  display: flex;
+  flex-direction: column;
+  min-width: 300px;
+  max-width: 300px;
 }
 
 .Card .Title {
@@ -17,4 +22,5 @@
   color: #000;
   padding: 20px;
   border-radius: 10px;
+  flex: 1;
 }
