--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   background-color: blueviolet;
   color: aliceblue;
-  font-family: Oswald;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-align: center;
 }
 
